--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "slim/slim": "^4.12",
-        "slim/psr7": "^1.6"
+        "slim/psr7": "^1.6",
+        "slim/twig-view": "^3.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*"
