--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Evolva\\PhpProject9\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
@@ -18,6 +18,7 @@
         "slim/twig-view": "^3.3"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "3.*",
+        "symfony/var-dumper": "^7.0"
     }
 }
