--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "slim/twig-view": "^3.3",
         "vlucas/valitron": "^1.4",
         "slim/flash": "^0.4.0",
-        "php-di/php-di": "^7.0"
+        "php-di/php-di": "^7.0",
+        "nesbot/carbon": "^2.72"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
