--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "vlucas/valitron": "^1.4",
         "slim/flash": "^0.4.0",
         "php-di/php-di": "^7.0",
-        "nesbot/carbon": "^2.72"
+        "nesbot/carbon": "^2.72",
+        "slim/http": "^1.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
