--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "slim/flash": "^0.4.0",
         "php-di/php-di": "^7.0",
         "nesbot/carbon": "^2.72",
-        "slim/http": "^1.3"
+        "slim/http": "^1.3",
+        "guzzlehttp/guzzle": "^7.8",
+        "imangazaliev/didom": "^2.0",
+        "illuminate/support": "^10.37"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
